@@ -1,6 +1,7 @@
 2003-02-26	fabian
     * Fixed general double-width character processing in ARRAY mode
     * Fixed "last line missing" bug in ARRAY mode
+    * Fixed "clearBuffer" bug in BUFFER mode
     
 2003-02-25	fabian
     * Further optimization of BUFFER method by updating
